Fixing flex align for desktop

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -20,8 +20,7 @@
 @mixin flexStart {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-between;
 }
 
 @mixin flexBetween {
